# liric

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md  STATUS.md  TASKS_PLATFORM_RUNTIME.md  TODO.md  input
.github/workflows/: bench_matrix_llvm_api.yml  ci.yml  lfortran_api_compat.yml  llvm_backend_compat.yml  nightly_mass.yml
architecture/: README.md  workspace.dsl
architecture/adrs/: 0001-architecture-scope-and-enforcement.md
architecture/docs/: 01-overview.md
build_llvm_ci/: .ninja_deps  .ninja_log  CTestTestfile.cmake  bench_api_callgrind_hot  bench_compat_check  bench_corpus  bench_exe_matrix  bench_lane_api  bench_lane_ir  bench_ll  bench_matrix  build.ninja  liric  liric_probe_runner  stencil_gen  test_liric
build_llvm_ci/ctest_work/bench_api_expected_stop/: fake_lfortran_liric.sh  (+1 more)
cmake/: prepare_lfortran_checkout.cmake
cmake/patches/: lfortran_liric_compat.patch  lfortran_llvm20_opaque_pointer.patch
docs/: lfortran_failure_taxonomy.md  lfortran_mass_testing.md  lfortran_mass_tracker.md  llvm_compat_header_audit.md  postmortem_api_clean_pass_2026_02_11.md
docs/benchmarks/: benchmark_matrix.md  readme_perf_snapshot.json  readme_perf_table.md
docs/lfortran_mass/: failure_task_list.md  investigation_plan.md
docs/slides/: api_callgrind_split.tex
include/liric/: liric.h  liric_compat.h  liric_compile.h  liric_ir_shared.h  liric_legacy.h  liric_session.h  liric_types.h  llvm_compat_c.h
include/llvm-c/: LiricCompat.h  LiricSession.h
src/: arena.c  arena.h  bc_decode.c  bc_decode.h  builder.c  compile_mode.c  compile_mode.h  compile_session.c  compiler.c  cp_template.h  frontend_common.c  frontend_common.h  frontend_registry.c  frontend_registry.h  ir.c  ir.h  jit.c  jit.h  liric.c  liric.h  liric_compat.c  ll_lexer.c  ll_lexer.h  ll_parser.c  ll_parser.h  llvm_backend.c  llvm_backend.h  llvm_c_shim.c  llvm_compat_c.c  llvm_stubs.c  lr_float128.c  module_emit.c  module_emit.h  objfile.c  objfile.h  objfile_elf.c  objfile_elf.h  objfile_macho.c  objfile_macho.h  runtime_archive.c  (+25 more)
src/platform/: cp_templates_x86_64.S  platform.h  platform_intrinsic_blobs_riscv64.h  platform_intrinsic_stubs_aarch64_darwin.S  platform_intrinsic_stubs_aarch64_linux.S  platform_intrinsic_stubs_riscv64_linux.S  platform_intrinsic_stubs_x86_64_linux.S  platform_intrinsics.c  platform_os.c  platform_os.h
stencils/: add_i32.c  fadd_f64.c  sub_i64.c
tests/: test_bc.c  test_builder.c  test_codegen.c  test_compile_session.c  test_cp.c  test_e2e.c  test_header_shared.c  test_jit.c  test_lexer.c  test_llvm_backend_roundtrip.cpp  test_llvm_c_shim.c  test_llvm_compat.cpp  test_main.c  test_merge.c  test_objfile.c  test_packed_struct.ll  test_parser.c  test_platform_os.c  test_session.c  test_stencil_gen.c  test_stencil_runtime.c  test_target_shared.c  test_targets.c  test_vector.ll  test_vector_ops.ll  test_wasm.c
tests/cmake/: test_bench_api_alias_source.cmake  test_bench_api_clean_gate_forwarding.cmake  test_bench_api_empty_dataset_gate.cmake  test_bench_api_expected_stop_classification.cmake  test_bench_api_llvm_retry_paths.cmake  test_bench_api_nonzero_compat.cmake  test_bench_api_options_hygiene.cmake  test_bench_api_requires_lfortran_liric.cmake  test_bench_api_signal_classification.cmake  test_bench_api_strict_mode.cmake  test_bench_api_subprocess_overhead_summary.cmake  test_bench_api_time_report_segv_recovery.cmake  test_bench_api_timeout_diagnostics.cmake  test_bench_api_zero_skip_gate.cmake  test_bench_compat_check_freeze.cmake  test_bench_compat_check_rc_policy.cmake  test_bench_corpus_compare_empty_dataset_gate.cmake  test_bench_corpus_empty_dataset_gate.cmake  test_bench_exe_matrix_modes.cmake  test_bench_ll_empty_dataset_gate.cmake  test_bench_matrix_lfortran_rebuild.cmake  test_bench_matrix_requires_lfortran_liric.cmake  test_bench_readme_perf_gate.cmake  test_lfortran_api_compat_fresh_workspace.cmake  test_lfortran_api_compat_ref_policy.cmake  test_lfortran_api_compat_tool_preflight.cmake  test_lfortran_api_compat_workflow_contract.cmake  test_liric_cli_exe_mode.cmake  test_liric_cli_exe_run.cmake  test_liric_cli_llvm_backend_obj_run.cmake  test_liric_cli_llvm_backend_run.cmake  test_liric_cli_obj_link_run.cmake  test_liric_cli_obj_mode.cmake  test_liric_cli_riscv_emit_fail.cmake  test_liric_cli_riscv_qemu_run.cmake  test_liric_static_archive_symbols.cmake  test_llvm_backend_compat_policy.cmake  test_llvm_backend_workflow_contract.cmake  test_llvm_target_init_stubs.cmake  test_nightly_mass_shell_runner.cmake  (+2 more)
tests/ll/: add_i32.ll  branch.ll  intrinsic_exec_math.ll  intrinsic_exec_mem.ll  intrinsic_exec_va_end_unsuffixed.ll  intrinsic_obj_powi_neg.ll  issue_512_dual_phi.ll  llvm_roundtrip_dup_decl.ll  llvm_roundtrip_mem.ll  loop.ll  no_main.ll  riscv_add_imm_42.ll  riscv_fp_ret_9.ll  riscv_intrinsic_math.ll  riscv_intrinsic_trig.ll
tests/wasm/: loop.wasm
tools/: arch_check.sh  arch_extract.sh  arch_regen.sh  bench_api.c  bench_api.py  bench_api_callgrind_hot.c  bench_api_clean_gate.sh  bench_api_jit.c  bench_common.c  bench_common.h  bench_compat_check.c  bench_compat_check.py  bench_compile_speed.py  bench_corpus.c  bench_corpus_compare.c  bench_exe_matrix.c  bench_h2h.py  bench_inprocess_h2h.py  bench_jit_phases.c  bench_lfortran_e2e.py  bench_ll.c  bench_ll.py  bench_lli_phases.c  bench_llvm_jit.c  bench_manifest.json  bench_matrix.c  bench_overhead_probe.c  bench_parse_overhead.py  bench_parse_vs_jit.c  bench_readme_perf_gate.sh  bench_readme_perf_snapshot.sh  bench_shell_common.sh  bench_tcc.c  corpus_100.tsv  gen_runtime_ll.sh  issue_tracker_checklist_sync.sh  lfortran_no_link_compare.sh  lfortran_ref_test_liric.py  liric_main.c  liric_probe_runner.c  (+5 more)
tools/lfortran_mass/: __init__.py  classify.py  integration_tests_cmake.py  lfortran_api_compat.sh  lfortran_pr_parity.sh  lfortran_pr_parity_common.sh  lfortran_tests_toml.py  nightly_mass.sh  prepare_liric_runtime.sh  render_fail_tasklist.sh  report.py  run_mass.py  test_classify.py  test_report_selection.py  test_run_mass_helpers.py  unsupported_bucket_map.json
(+309 files in other folders)
